test/typechecker.d/valid/main0.souc
main(stdout: OutputStream): IO = do
	x <- 4
	write stdout , "whoa"
