test/typechecker.d/invalid/main0.souc
main(stdout: OutputStream): IO = do
	x <- 4
	writey  "whoa" , stdout
